tests/invalid_syntax/test_nested_procedure_def.aphi
/*
Parser error: Procedure defined inside another procedure.
Procedures can only be defined at the top level.
*/

procedure main {
    procedure inner {
    }
}
